--- a/pages/pdf-reader.html
+++ b/pages/pdf-reader.html
@@ -23,7 +23,7 @@
 <body class="pdf-page">
   <h1>Your music, for your viewing pleasure</h1>
   <div id="pdf-viewer"></div>
-  <button onclick="location.href='../index.html'">Back to First Page</button>
+  <button onclick="location.href='../'">Back to First Page</button>
 
   <!-- ✅ PDF.js via CDN -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
