--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 <body>
     <div id="app">
         <h1>Welcome to the PianoBingo POC</h1>
-        <button onclick="location.href='pages/pdf-reader.html'">Go to Music Sheet PDF Reader</button>
+        <button onclick="location.href='pages/pdf-reader'">Go to Music Sheet PDF Reader</button>
     </div>
+    <script src="../resources/base64/introdutione-seconda.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
