--- a/pages/pdf-reader/pdf-reader.html
+++ b/pages/pdf-reader/pdf-reader.html
@@ -4,21 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>PDF Reader</title>
-  <link rel="stylesheet" href="../styles.css" />
-  <style>
-    #pdf-viewer {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 20px;
-      margin-top: 20px;
-    }
-
-    canvas {
-      box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2);
-      border-radius: 12px;
-    }
-  </style>
+  <link rel="stylesheet" href="./pdf-reader.css" />
 </head>
 <body class="pdf-page">
   <h1>Your music, for your viewing pleasure</h1>
