page navigation now works correctly

--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
 <body>
     <iframe id="app-content-frame" src="pages/welcome-page/welcome-page.html"></iframe>
     <script src="app.js"></script>
+    <script src="services/navigation/host.js"></script>
 </body>
 </html>
