--- a/pages/welcome-page/welcome-page.html
+++ b/pages/welcome-page/welcome-page.html
@@ -20,7 +20,7 @@
         <div class="logo-container">
             <img src="../../resources/images/logo.png" alt="PianoBingo Logo" id="logo" width="306px">
         </div>
-        <button>
+        <button onclick="loadPage(PAGE.GAME)">
             New Game
         </button>
         <button>
@@ -31,5 +31,6 @@
         </button>
         <img class="piano-banner" src="../../resources/images/piano.png">
     </div>
+    <script src="../../services/navigation/navigation.js"></script>
 </body>
 </html>
