--- a/pages/welcome-page/welcome-page.html
+++ b/pages/welcome-page/welcome-page.html
@@ -20,7 +20,7 @@
         <div class="logo-container">
             <img src="../../resources/images/logo.png" alt="PianoBingo Logo" id="logo" width="306px">
         </div>
-        <button onclick="loadPage(PAGE.GAME)">
+        <button onclick="newGameButtonHandler()">
             New Game
         </button>
         <button>
@@ -32,5 +32,17 @@
         <img class="piano-banner" src="../../resources/images/piano.png">
     </div>
     <script src="../../services/navigation/navigation.js"></script>
+    <script src="../../resources/state-helpers/gameStorage.js"></script>  
+    <script>
+        function newGameButtonHandler() {
+            const state = startNewGame();
+            if (state) {
+                console.log("New game started");
+                loadPage(PAGE.PACK_SELECT)
+            } else {
+                alert("Failed to start a new game");
+            }
+        }
+    </script>
 </body>
 </html>
